--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../template 6/Css/all.min.css">
-    <link rel="stylesheet" href="../template 6/Css/normalize.css">
-    <link rel="stylesheet" href="../template 6/Css/style.css">
+    <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com2?family=Montserrat:wght@100;300;500;700&display=swap" rel="stylesheet">
     <title>Website | Template 6</title>
 </head>
 
@@ -82,7 +82,7 @@
 
         <div class="boxs">
             <div class="box">
-                <img class="image" src="../template 6/img/services.png" alt="">
+                <img class="image" src="services.png" alt="">
                 <div class="text">
                     <h3>WEB DESIGN
                     </h3>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="box">
-                <img class="image" src="../template 6/img/services.png" alt="">
+                <img class="image" src="services.png" alt="">
 
                 <div class="text">
                     <h3>WEB DESIGN
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="box">
-                <img class="image" src="../template 6/img/services.png" alt="">
+                <img class="image" src="services.png" alt="">
 
                 <div class="text">
                     <h3>WEB DESIGN
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="box">
-                <img class="image" src="../template 6/img/services.png" alt="">
+                <img class="image" src="services.png" alt="">
 
                 <div class="text">
                     <h3>WEB DESIGN
@@ -147,7 +147,7 @@
                     blanditiis possimus unde expedita. Modi ullam consequuntur cupiditate itaque dicta atque! Cum
                     necessitatibus vel minima consectetur at.</p>
             </div>
-            <img src="../template 6/img/img-1.png" alt="">
+            <img src="img-1.png" alt="">
         </div>
         <div class="plan">
 
@@ -158,7 +158,7 @@
                     blanditiis possimus unde expedita. Modi ullam consequuntur cupiditate itaque dicta atque! Cum
                     necessitatibus vel minima consectetur at.</p>
             </div>
-            <img src="../template 6/img/img-1.png" alt="">
+            <img src="img-1.png" alt="">
 
         </div>
         <div class="plan">
@@ -169,7 +169,7 @@
                     blanditiis possimus unde expedita. Modi ullam consequuntur cupiditate itaque dicta atque! Cum
                     necessitatibus vel minima consectetur at.</p>
             </div>
-            <img src="../template 6/img/img-1.png" alt="">
+            <img src="img-1.png" alt="">
         </div>
         <div class="plan">
 
@@ -180,7 +180,7 @@
                     blanditiis possimus unde expedita. Modi ullam consequuntur cupiditate itaque dicta atque! Cum
                     necessitatibus vel minima consectetur at.</p>
             </div>
-            <img src="../template 6/img/img-1.png" alt="">
+            <img src="img-1.png" alt="">
 
         </div>
         <div class="plan">
@@ -191,7 +191,7 @@
                     blanditiis possimus unde expedita. Modi ullam consequuntur cupiditate itaque dicta atque! Cum
                     necessitatibus vel minima consectetur at.</p>
             </div>
-            <img src="../template 6/img/img-1.png" alt="">
+            <img src="img-1.png" alt="">
         </div>
 
 
@@ -203,7 +203,7 @@
 
         <div class="col-1">
             <div class="col-1pic">
-                <img src="../template 6/img/img-2.png" alt="">
+                <img src="img-2.png" alt="">
             </div>
         </div>
         <div class="col-2">
@@ -243,7 +243,7 @@
             </div>
             <div class="boxs">
                 <div class="box">
-                    <img src="../template 6/img/phone.png" alt="">
+                    <img src="phone.png" alt="">
                     <div class="text">
                         <h4>Phone</h4>
                         <span>+1 234 123 1234<br>
@@ -251,7 +251,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="../template 6/img/new-post.png" alt="">
+                    <img src="new-post.png" alt="">
                     <div class="text">
                         <h4>Email</h4>
                         <span>info@gmail.com<br>
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="../template 6/img/map-marker.png" alt="">
+                    <img src="map-marker.png" alt="">
                     <div class="text">
                         <h4>Address</h4>
                         <span>Fatikchhari, Chittagong, Bangladesh</span>
@@ -286,12 +286,12 @@
                 <p> Your Complete Web Solution</p>
             </div>
             <ul>
-                <li><a href="index.html"></a><img class="icon-image" src="../template 6/img/facebook-new.png" alt="">
+                <li><a href="index.html"></a><img class="icon-image" src="facebook-new.png" alt="">
                 </li>
-                <li><a href="index.html"></a><img class="icon-image" src="../template 6/img/instagram-new.png" alt="">
+                <li><a href="index.html"></a><img class="icon-image" src="instagram-new.png" alt="">
                 </li>
-                <li><a href="index.html"></a><img class="icon-image" src="../template 6/img/twitter.png" alt=""></li>
-                <li><a href="index.html"></a><img class="icon-image" src="../template 6/img/behance.png" alt=""></li>
+                <li><a href="index.html"></a><img class="icon-image" src="twitter.png" alt=""></li>
+                <li><a href="index.html"></a><img class="icon-image" src="behance.png" alt=""></li>
 
             </ul>
             <div class="copy-right">
